Revert "update css"
This reverts commit 0b209a3681dc388079477d1d89d1d53c2c9de31d.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -225,6 +225,7 @@ body {
   
   position: relative;
   top: 0px;
+  left: -170px;
 }
 
 .sorter > .right {
@@ -232,7 +233,7 @@ body {
   border: 1px solid #000000;
   position: relative;
   top: 0px;
-
+  right: -10px;
 }
 
 .options {
