--- a/src/css/a.css
+++ b/src/css/a.css
@@ -1,36 +1,19 @@
-
 body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
-  background-color: rgb(255,105,180);
 }
 
 .container {
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
-  border-color: white;
-  color: white;
+  margin-top: 1em;
+}
 
-}
-.title{
-  margin-top: 20px;
-  margin-bottom: 20px;
-  color: #e1ffd7;
-  color: transparent;
-  background-image: linear-gradient(#fff, #e1ffd7);
-  -webkit-background-clip: text;
-  font-size: 40px;
-  text-align: center;
-}
 .progress {
   margin: 1em auto;
   width: 500px;
   display: none;
-  background-color: white;
-  padding:20px;
-  border-radius: 10px;
-  color: black;
 }
 
 .progressbar {
@@ -39,25 +22,19 @@ body {
   border: 1px solid black;
   padding: 3px;
   margin: 2px 0px;
-  box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.35);
+}
 
-}
-.progressbattle{
-  width: 492px;
-  text-align:center;
-}
 .progresstext {
   position: absolute;
   width: 492px;
-  margin-top: 3px;
-  margin-bottom: 5px;
+  margin: 3px 0px;
   text-align: center;
   font-size: 0.7em;
 }
 
 .progressfill {
   height: 20px;
-  background-color:rgb(255,105,180) ;
+  background-color: #5f1985;
   width: 0%;
 }
 
@@ -70,74 +47,20 @@ body {
 }
 
 .button {
-  border: 1px solid white;
+  border: 1px solid black;
   text-align: center;
+  padding: 10%;
   grid-column: 2 / 3;
   cursor: pointer;
-  margin-top: 6px;
-  max-width: 100%;
-  max-height: 100%;
-  padding: 10px;
-  box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.35);
-}
-
-.left.sort.image {
-  border-radius:10px;
-  box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.35);
-  margin-right:20%;
-}
-
-.responsive-img{
-  border-radius:10px;
-  box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.35);
 }
 
 .starting.start.button {
-  
-  grid-row: span 3;
-  font-size: 20px;
-
+  grid-row: span 6;
 }
 
 .starting.load.button {
   grid-row: span 3;
   display: none;
-}
-
-.sorting.tie.button {
-  font-size: 20px;
-  grid-row: span 1;
-  border-radius:10px;
-}
-
-.sorting.undo.button {
-  font-size: 20px;
-  grid-row: span 1;
-  border-radius:10px;
-}
-
-.sorting.save.button {
-  font-size: 20px;
-  grid-row: span 1;
-  border-radius:10px;
-}
-
-.finished.save.button {
-  font-size: 20px;
-  grid-row: span 1;
-  border-radius:10px;
-}
-
-.finished.getimg.button {
-  font-size: 20px;
-  grid-row: span 1;
-  border-radius:10px;
-}
-
-.finished.list.button {
-  font-size: 20px;
-  grid-row: span 1;
-  border-radius:10px;
 }
 
 .sorting.button, .finished.button {
@@ -154,7 +77,7 @@ body {
   width: 25px;
   height: 25px;
   margin: 50px auto;
-  background-color: #ffffff;
+  background-color: #333;
 
   border-radius: 100%;  
   -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
@@ -188,37 +111,25 @@ body {
 }
 
 .sorter > .image {
-  width: 280px;
-  height: 350px;
+  width: 207px;
+  height: 250px;
   margin: auto;
   grid-row: 1 / 7;
   cursor: pointer;
 }
 
-.left.sort.text{
-  border-color: white;
-  border-radius: 10px;
-  box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.35);
-}
-.right.sort.text{
-  border-color: white;
-  border-radius: 10px;
-  box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.35);
-}
-
 .sorter > .text {
-  width: 280px;
+  width: 207px;
   height: 60px;
   display: none;
 }
 
 .sorter > .text > p {
-  margin-top: 20px;
+  margin: 0.5em 5px 0px;
   width: calc(100%-10px);
   text-align: center;
-  font-size: 16px;
+  font-size: 0.8em;
   line-height: 1.5em;
-
 }
 
 .sorter > .left {
@@ -227,15 +138,12 @@ body {
   
   position: relative;
   top: 0px;
-  left: -170px;
+  left: -90px;
 }
 
 .sorter > .right {
   grid-column: 3 / 4;
   border: 1px solid #000000;
-  position: relative;
-  top: 0px;
-  right: -10px;
 }
 
 .options {
@@ -250,7 +158,7 @@ body {
 }
 
 .options > div {
-  font-size: 12px;
+  font-size: 0.5625em;
 }
 
 label {
