--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,37 +1,19 @@
-
 body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
-  background-color: rgb(255,105,180);
-
 }
 
 .container {
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
-  border-color: white;
-  color: white;
+  margin-top: 1em;
+}
 
-}
-.title{
-  margin-top: 20px;
-  margin-bottom: 20px;
-  color: #e1ffd7;
-  color: transparent;
-  background-image: linear-gradient(#fff, #e1ffd7);
-  -webkit-background-clip: text;
-  font-size: 40px;
-  text-align: center;
-}
 .progress {
   margin: 1em auto;
   width: 500px;
   display: none;
-  background-color: white;
-  padding:20px;
-  border-radius: 10px;
-  color: black;
 }
 
 .progressbar {
@@ -40,25 +22,19 @@ body {
   border: 1px solid black;
   padding: 3px;
   margin: 2px 0px;
-  box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.35);
+}
 
-}
-.progressbattle{
-  width: 492px;
-  text-align:center;
-}
 .progresstext {
   position: absolute;
   width: 492px;
-  margin-top: 3px;
-  margin-bottom: 5px;
+  margin: 3px 0px;
   text-align: center;
   font-size: 0.7em;
 }
 
 .progressfill {
   height: 20px;
-  background-color:rgb(255,105,180) ;
+  background-color: #5f1985;
   width: 0%;
 }
 
@@ -71,43 +47,21 @@ body {
 }
 
 .button {
-  border: 1px solid white;
+  border: 1px solid black;
   text-align: center;
+  padding: 10%;
   grid-column: 2 / 3;
   cursor: pointer;
-  margin-top: 6px;
-  max-width: 100%;
-  max-height: 100%;
-  padding: 10px;
-  box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.35);
-}
-
-.left.sort.image {
-  border-radius:10px;
-  box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.35);
-}
-
-.right.sort.image{
-  border-radius:10px;
-  box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.35);
 }
 
 .starting.start.button {
-  
   grid-row: span 6;
-  font-size: 20px;
-  border-radius:10px;
-  box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.35);
-
 }
 
 .starting.load.button {
   grid-row: span 3;
   display: none;
-  border-radius:10px;
-  box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.35);
 }
-
 
 .sorting.button, .finished.button {
   grid-row: span 2;
@@ -123,7 +77,7 @@ body {
   width: 25px;
   height: 25px;
   margin: 50px auto;
-  background-color: #ffffff;
+  background-color: #333;
 
   border-radius: 100%;  
   -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
@@ -164,17 +118,6 @@ body {
   cursor: pointer;
 }
 
-.left.sort.text{
-  border-color: white;
-  border-radius: 10px;
-  box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.35);
-}
-.right.sort.text{
-  border-color: white;
-  border-radius: 10px;
-  box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.35);
-}
-
 .sorter > .text {
   width: 207px;
   height: 60px;
@@ -182,12 +125,11 @@ body {
 }
 
 .sorter > .text > p {
-  margin-top: 20px;
+  margin: 0.5em 5px 0px;
   width: calc(100%-10px);
   text-align: center;
-  font-size: 16px;
+  font-size: 0.8em;
   line-height: 1.5em;
-
 }
 
 .sorter > .left {
@@ -202,7 +144,6 @@ body {
 .sorter > .right {
   grid-column: 3 / 4;
   border: 1px solid #000000;
-  
 }
 
 .options {
@@ -217,7 +158,7 @@ body {
 }
 
 .options > div {
-  font-size: 12px;
+  font-size: 0.5625em;
 }
 
 label {
