--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,19 +1,37 @@
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
+  background-color: rgb(255,105,180);
+
 }
 
 .container {
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
-  margin-top: 1em;
-}
+  border-color: white;
+  color: white;
 
+}
+.title{
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: #e1ffd7;
+  color: transparent;
+  background-image: linear-gradient(#fff, #e1ffd7);
+  -webkit-background-clip: text;
+  font-size: 40px;
+  text-align: center;
+}
 .progress {
   margin: 1em auto;
   width: 500px;
   display: none;
+  background-color: white;
+  padding:20px;
+  border-radius: 10px;
+  color: black;
 }
 
 .progressbar {
@@ -22,19 +40,25 @@ body {
   border: 1px solid black;
   padding: 3px;
   margin: 2px 0px;
-}
+  box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.35);
 
+}
+.progressbattle{
+  width: 492px;
+  text-align:center;
+}
 .progresstext {
   position: absolute;
   width: 492px;
-  margin: 3px 0px;
+  margin-top: 3px;
+  margin-bottom: 5px;
   text-align: center;
   font-size: 0.7em;
 }
 
 .progressfill {
   height: 20px;
-  background-color: #5f1985;
+  background-color:rgb(255,105,180) ;
   width: 0%;
 }
 
@@ -47,20 +71,71 @@ body {
 }
 
 .button {
-  border: 1px solid black;
+  border: 1px solid white;
   text-align: center;
-  padding: 10%;
   grid-column: 2 / 3;
   cursor: pointer;
+  margin-top: 6px;
+  max-width: 100%;
+  max-height: 100%;
+  padding: 10px;
+  box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.35);
+}
+
+.left.sort.image {
+  border-radius:10px;
+  box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.35);
+}
+
+.right.sort.image{
+  border-radius:10px;
+  box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.35);
 }
 
 .starting.start.button {
+  
   grid-row: span 6;
+  font-size: 20px;
+  border-radius:10px;
+  box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.35);
+
 }
 
 .starting.load.button {
   grid-row: span 3;
   display: none;
+  border-radius:10px;
+  box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.35);
+}
+
+.sorting.tie.button {
+  font-size: 20px;
+  border-radius:10px;
+}
+
+.sorting.undo.button {
+  font-size: 20px;
+  border-radius:10px;
+}
+
+.sorting.save.button {
+  font-size: 20px;
+  border-radius:10px;
+}
+
+.finished.save.button {
+  font-size: 20px;
+  border-radius:10px;
+}
+
+.finished.getimg.button {
+  font-size: 20px;
+  border-radius:10px;
+}
+
+.finished.list.button {
+  font-size: 20px;
+  border-radius:10px;
 }
 
 .sorting.button, .finished.button {
@@ -77,7 +152,7 @@ body {
   width: 25px;
   height: 25px;
   margin: 50px auto;
-  background-color: #333;
+  background-color: #ffffff;
 
   border-radius: 100%;  
   -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
@@ -118,6 +193,17 @@ body {
   cursor: pointer;
 }
 
+.left.sort.text{
+  border-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.35);
+}
+.right.sort.text{
+  border-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.35);
+}
+
 .sorter > .text {
   width: 207px;
   height: 60px;
@@ -125,11 +211,12 @@ body {
 }
 
 .sorter > .text > p {
-  margin: 0.5em 5px 0px;
+  margin-top: 20px;
   width: calc(100%-10px);
   text-align: center;
-  font-size: 0.8em;
+  font-size: 16px;
   line-height: 1.5em;
+
 }
 
 .sorter > .left {
@@ -144,6 +231,7 @@ body {
 .sorter > .right {
   grid-column: 3 / 4;
   border: 1px solid #000000;
+  
 }
 
 .options {
@@ -158,7 +246,7 @@ body {
 }
 
 .options > div {
-  font-size: 0.5625em;
+  font-size: 12px;
 }
 
 label {
